<resources>
    <string name="app_name">Tour Booking</string>
    <string name="intro_title">Explore the <font color="#3F95EC">\n World </font> with us</string>
    <string name="sub_intro_title">Experiences worldwide with ease. \nEnjoy personalized recommendations and exclusive deals</string>

    <!--    Main Screen-->
    <string name="main_screen_location">Location</string>
    <string name="main_screen_search_hint">Street address, City...</string>
    <string name="main_screen_search">Search</string>
    <string name="main_screen_see_all">See all</string>
    <string name="main_screen_recommended">Recommended</string>
    <string name="main_screen_popular_destination">Popular Destination</string>

    <!--    Bottom Menu-->
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_explorer">Explorer</string>
    <string name="bottom_menu_cart">Cart</string>
    <string name="bottom_menu_profile">Profile</string>

    <!--    Login-->
    <string name="login_branch_name">Tour booking</string>
    <string name="login_slogan">Sign in and enjoy a perfect stay!</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_login">Login</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_fail">Email or password is incorrect</string>

    <!--    Forgot password-->
    <string name="forgot_password_btn">Reset password</string>
    <string name="forgot_password_send_email_success">Reset password link has been sent</string>

    <!--    Sign up-->
    <string name="signup_signup">Sign up</string>
    <string name="signup_slogan">Sign up and start explore the world!</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm password</string>
    <string name="signup_have_account">Already have an account?</string>
    <string name="signup_email_existed">Email already exists</string>
    <string name="signup_password_no_match">Password is not match</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_min_length">Password must be at least %d characters</string>
    <string name="email_already_use">This email is already in use by another user</string>

    <string name="booking_btn">Booking</string>

    <!--    Profile-->
    <string name="profile_overview">Account overview</string>
    <string name="profile_my_profile">My profile</string>
    <string name="profile_my_ticket">My ticket</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_change_change_language">Change language</string>
    <string name="profile_logout">Logout</string>

    <string name="admin_bottom_menu_tour">Tours</string>
    <string name="admin_bottom_menu_user">Users</string>
    <string name="admin_bottom_menu_location">Location</string>
    <string name="admin_bottom_menu_profile">Profile</string>
    <string name="admin_bottom_menu_voucher">Voucher</string>

    <string name="admin_tour_location">Location</string>
    <string name="admin_tour_category">Category</string>

    <string name="dialog_delete_message">Are you sure you want to delete this?</string>
    <string name="dialog_delete_ok">OK</string>
    <string name="dialog_delete_cancel">Cancel</string>

    <!--    Manage user-->
    <string name="manage_user_search_hint">UID, name…</string>
    <string name="manage_user_name_user_hint">(Name)</string>
    <string name="manage_user_email_user_hint">(Email)</string>
    <string name="manage_user_uid_hint">(UID)</string>
    <string name="manage_user_create_at_hint">(Create at)></string>
    <string name="manage_user_role_hint">(Role)</string>

    <string name="manage_user_name_label">Name</string>
    <string name="manage_user_uid_label">UID</string>
    <string name="manage_user_email_label">Email</string>
    <string name="manage_user_create_at_label">Create at</string>
    <string name="manage_user_role_label">Role</string>

    <string name="delete_user_message">Do you want to delete this user?</string>
    <string name="delete_user_success">Delete user successful</string>
    <string name="delete_user_error">Something went wrong!</string>

    <string name="payment_detail">Payment detail</string>
    <string name="payment_payment">Payment</string>

    <!--    Ticket-->
    <string name="ticket_delete_message">Are you sure you want to delete this ticket</string>
    <string name="ticket_delete_success">Delete ticket successful</string>
    <string name="ticket_delete_error">Something went wrong!</string>

    <!--    Cart-->
    <string name="cart_delete_item_success">Delete item successful</string>

    <string name="start_date">Start date: %s</string>
    <string name="end_date">End date: %s</string>
    <string name="discount_percent">%s%% off</string>
    <string name="discount_value">%s VND off</string>
    <string name="voucher_banner_percent">%s%%</string>
    <string name="voucher_banner_fixed">%s VND</string>
    <string name="submit">Submit</string>
    <string name="voucher_applied">%s voucher(s) have been applied</string>

<!--    common-->
    <string name="save">Save</string>
</resources>